# span-annotations

./: README.md  pyproject.toml
examples/: example_deduce_annotation_to_span.py  example_deduce_annotation_to_workflow.py  example_deduce_annotations_to_spans.py  example_deduce_annotations_to_workflow.py  example_span_label_to_deduce_tag.py  example_span_to_deduce_annotation.py  example_spans_to_deduce_annotations.py  example_workflow_annotation_to_deduce.py  example_workflow_annotations_to_deduce.py  example_workflow_label_to_deduce_tag.py  span_conversion_example.py  workflow_conversion_example.py
span_annotations/: __init__.py  alignment.py  deduce.py  evaluation.py  span_labels.py  transform.py
tests/: test_alignment.py  test_conversion.py  test_evaluation.py  test_package_api.py  test_transform.py
