[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "span-annotations"
version = "0.1.0"
description = "Utilities for span annotation parsing, alignment, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "biopython>=1.81",
  "docdeid>=1.0.0",
  "jpype1>=1.5.0",
  "typing-extensions>=4.0; python_version < '3.11'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["span_annotations"]
